GERONIMO-2440 Geronimo java.endorsed.dirs support is non-functional
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/trunk@452362 13f79535-47bb-0310-9956-ffa450edef68